# bertha

./: .editorconfig  .gitignore  .gitmodules  .golangci.yaml  Cargo.toml  README.md  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: go.yaml  integration.yaml  rust.yaml  stacked-prs.yaml
bertha-types/: Cargo.toml
bertha-types/src/: address.rs  as_hex.rs  block.rs  block_header.rs  block_identifier.rs  block_number.rs  eip_2718_utils.rs  error.rs  hex_convert.rs  known_hashes.rs  lib.rs  log.rs  nonce.rs  parse_hex_error.rs  proofs.rs  receipts.rs  rlp_utils.rs  serializable_byte_array.rs  serializable_byte_vec.rs  serializable_u64.rs  transaction.rs  u256.rs  wei.rs  withdrawal.rs
bertha-types/src/test_data/: mod.rs  test_data_blocks.rs  test_data_receipts.rs  test_data_transaction.rs  test_data_withdrawals.rs
bertha-types/src/transaction/: access_list_tx.rs  blob_tx.rs  dynamic_fee_tx.rs  error.rs  legacy_tx.rs  mod.rs  set_code_tx.rs
bertha-types/src/witness_proof/: known_hashes.rs  mod.rs  nibbles.rs
block-db-go-bindings/: README.md  block.pb.go  block_db.go  block_db_mock.go  block_db_test.go  enable-carmen.patch  enable-tracy-carmen.patch  enable-tracy.patch  execution_log.txt  go-run-with-carmen-and-tracy.sh  go-run-with-carmen.sh  go-run-with-tracy.sh  go.mod  go.sum  proto_gen.go  sepolia.json  sonic.json
block-db-go-bindings/analysis/: extract_stakers_csv.py  stakers.csv  stakers.json  tx_history_analysis.ipynb
block-db-go-bindings/cmd/block-db/: README.md  main.go
block-db-go-bindings/cmd/block-db/app/: app.go  app_test.go  convert.go  convert_test.go  corrections.go  corrections_test.go  diagnostics.go  diagnostics_mock.go  flags.go  (+23 more)
block-db-go-bindings/tracy/: tracy.cpp  tracy.cpp_old  tracy.go  tracy.go_old  tracy.h  tracy_test.go
blockserver/: Cargo.toml  build.rs
blockserver/src/: error.rs  proto.rs
blockservice/: Cargo.toml  README.md  build.rs
blockservice/res/: blockservice.toml
blockservice/src/: app_dir.rs  blockdb.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  rpc_client.rs  rpc_server.rs  rpc_test_utils.rs  test_templates.rs  workspace.rs
blockservice/src/cmd/: fetch.rs  fetch_metadata.rs  fetch_state_updates.rs  import.rs  import_metadata.rs  init.rs  list.rs  mod.rs  purge.rs  start.rs  verify.rs  view.rs  view_metadata.rs
blockservice/src/db/: blockdb.rs  mod.rs  proto.rs  rocksblockdb.rs  rocksdb.rs
blockservice/src/grpc/: auth.rs  client.rs  mod.rs  proto.rs  proto_rpc.rs  server.rs  test_utils.rs
blockservice/src/json_rpc/: block_subscription.rs  error.rs  mod.rs  source.rs  test_utils.rs
blockservice/src/utils/: mod.rs  ranges.rs  test_dir.rs
blockservice/tests/: client_server_integration_test.rs  dummy_integration_test.rs  integration_test_module.rs  readme.rs  test_utils.rs
blockservice/tests/integration_tests/: client_connect_to_unavailable_server_fails.rs  client_connects_to_unavailable_server.rs  client_fetch_then_fetch_again_is_noop.rs  client_fetch_then_purges_part_then_fetch_missing.rs  client_fetch_then_verify_then_fetch_more_then_verify.rs  client_fetches_and_prints_out_a_block.rs  client_fetches_and_purges_data_and_fetches_again_to_restore_db.rs  client_fetches_and_verifies_blocks.rs  client_fetches_blocks_already_in_local_db.rs  client_fetches_metadata.rs  client_fetches_metadata_and_prints.rs  client_fetches_state_updates.rs  client_list_remote_then_fetch_metadata_then_list_then_view_metadata.rs  client_list_remote_then_fetch_then_list_then_view.rs  dummy_integration_test.rs  mod.rs  multiple_clients_fetch_blocks_from_the_same_server_concurrently.rs
blockservice/tests/test_utils/: mod.rs
data/genesis/: hoodi.json  sepolia.json  small.g  small.json  sonic-testnet.json  sonic.json
genesis-parser/: Cargo.toml
genesis-parser/src/: block.rs  block_parser.rs  era.rs  era1.rs  error.rs  lib.rs  slice_reader.rs  test_utils.rs  transaction_receipt.rs  units.rs
genesis-parser/src/era_dir/: common.rs  era.rs  era1.rs  erae.rs  mod.rs
genesis-parser/src/g_file/: block.rs  block_parser.rs  mod.rs  slice_reader.rs  test_utils.rs  transaction_receipt.rs  units.rs
go/: .golangci.yaml  README.md  README2.md  enable-carmen.patch  enable-tracy.patch  go-run-with-carmen-and-tracy.sh  go-run-with-carmen.sh  go.mod  go.sum  main.go
go/app/: app.go  app_test.go  convert.go  diagnostics.go  diagnostics_test.go  genesis.go  profile.go  profile_test.go  replay.go  replay_test.go  state_test.go  utils.go  verify.go  verify_test.go
go/blockdb/: block.pb.go  block_db.go  block_db_mock.go  block_db_test.go  proto_gen.go
go/cmd/: README.md  main.go
go/cmd/app/: convert_test.go  corrections.json  flags.go  metadata_test.go  replay.go  replay_test.go  state.go  state_test.go  verify.go  verify_test.go
go/convert/: convert.go  convert_test.go
go/replay/: archive_verifier.go  archive_verifier_test.go  checks.go  checks_test.go  corrections.go  corrections_test.go  ethereum.go  genesis.go  genesis_test.go  metadata.go  metadata_mock.go  metadata_test.go  progress_logger.go  progress_logger_test.go  replay.go  replay_mock.go  replay_test.go  snapshot_handler.go  snapshot_handler_test.go  state.go  state_mock.go  state_test.go
go/scripts/license/: add_license_header.go  add_license_header_test.go  go.mod
go/test_data_generator/: README.md  block.go  go.mod  go.sum  main.go  main_test.go  receipt.go  test_data_block.rs  transaction.go  utils.go
go/test_data_generator/geth_files/: api.go  gen_receipt_json.go
go/utils/: capturing_log_handler.go  dir.go  dir_test.go  iter.go  logger.go  logger_mock.go  progress_indicator.go  progress_indicator_mock.go  random_retention_pool.go  random_retention_pool_test.go  test_data.go
go/verify/: verify.go  verify_test.go
proto/: block.proto  rpc.proto
utils/scripts/license/: add_license_header.go  add_license_header_test.go  go.mod  license_header.txt
utils/test_data_generator/: block.go  go.mod  main.go  main_test.go  receipt.go  transaction.go  utils.go  withdrawal.go
utils/test_data_generator/geth_files/: api.go  gen_receipt_json.go
