[package]
name = "bertha-types"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
alloy-rlp = { version = "0.3.11", features = ["derive"] }
alloy-trie = "0.8.1"
bnum = "0.13.0"
const-hex = "1.14.0"
serde = { version = "1.0.219", features = ["derive"] }
sha3 = "0.10.8"
thiserror = "2.0.12"
ethbloom = "0.14.1"

[dev-dependencies]
serde_json = "1.0.140"
