[package]
name = "bertha-types"
version = "0.1.0"
edition = "2024"
publish = false
rust-version.workspace = true

[dependencies]
# serialization
serde = { version = "1.0.219", features = ["derive"] }
alloy-rlp = { version = "0.3.11", features = ["derive"] }
const-hex = "1.14.0"

# hashing & trie & bloom
sha3 = "0.10.8"
alloy-trie = "0.9.0"
ethbloom = "0.14.1"

# big int
bnum = "0.13.0"

# error handling
thiserror = "2.0.12"

[dev-dependencies]
# serialization
serde_json = "1.0.140"
