# Copyright 2026 Sonic Operations Ltd
# This file is part of the Sonic Client
#
# Sonic is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Sonic is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with Sonic. If not, see <http://www.gnu.org/licenses/>.

[package]
name = "bertha-types"
version = "0.1.0"
edition = "2024"
publish = false
rust-version.workspace = true

[dependencies]
# serialization
serde = { version = "1.0.219", features = ["derive"] }
alloy-rlp = { version = "0.3.11", features = ["derive"] }
const-hex = "1.14.0"

# hashing & trie & bloom
alloy-primitives = { version = "1", default-features = false, features = [
    "std",
] }
alloy-trie = "0.9.5"
ethbloom = { version = "0.14.1", default-features = false, features = ["std"] }

# big int
bnum = "0.14.4"

# error handling
thiserror = "2.0.12"

[dev-dependencies]
# parameterized tests
rstest = "0.26.1"

# serialization
serde_json = "1.0.140"
