[package]
name = "blockservice"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# bertha
bertha-types = { path = "../bertha-types" }
genesis-parser = { path = "../genesis-parser" }

# serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
prost = "0.13.5"
toml = "0.9.0"
toml_edit = "0.23.0"

# db
rocksdb = { version = "0.23.0", default-features = false, features = [
    "lz4",
    "bindgen-runtime",
] }

# rpc
tonic = { version = "0.13.1", features = ["zstd"] }
jsonrpsee = { version = "0.25.1", features = ["http-client"] }

# async
tokio = { version = "1.45.1", features = ["rt-multi-thread", "signal"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"

# cli
clap = { version = "4.5.40", features = ["derive"] }
indicatif = "0.18.0"

# error handling
thiserror = "2.0.12"

# utils
tempfile = "3.20.0"

[dev-dependencies]
# mocking
mockall = "0.13.1"
wiremock = "0.6.3"

# async utils
hyper-util = "0.1.14"
futures = "0.3.31"
tower = "0.5.2"

# utils
rand = "0.9.1"
indoc = "2.0.6"

[build-dependencies]
tonic-build = "*"

[lints]
workspace = true

[package.metadata.cargo-machete]
# Machete does not understand that prost is used in generated code.
ignored = ["prost"]
