# Copyright 2026 Sonic Operations Ltd
# This file is part of the Bertha testing infrastructure for Sonic.
#
# Bertha is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Bertha is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with Bertha. If not, see <http://www.gnu.org/licenses/>.

[package]
name = "blockservice"
version = "0.1.0"
edition = "2024"
publish = false
rust-version.workspace = true

[features]
tracy = ["tracy-client/default", "genesis-parser/tracy"]

[dependencies]
# bertha
bertha-types = { path = "../bertha-types" }
genesis-parser = { path = "../genesis-parser" }

# serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
prost = "0.14"
toml = "1.1.2"
toml_edit = "0.25.11"

# db
rocksdb = { version = "0.24.0", default-features = false, features = [
    "lz4",
    "bindgen-runtime",
] }

# rpc
tonic = { version = "0.14", features = ["zstd"] }
tonic-prost = "0.14"
jsonrpsee = { version = "0.26.0", features = ["http-client"] }

# async
tokio = { version = "1.45.1", features = ["rt-multi-thread", "signal"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"

# cli
clap = { version = "4.5.40", features = ["derive"] }
indicatif = "0.18.0"

# error handling
thiserror = "2.0.12"

# utils
tempfile = "3.20.0"

# profiling
tracy-client = { version = "=0.18.2", default-features = false } # "enabled" feature is disabled by default

[dev-dependencies]
# parameterized tests
rstest = "0.26.1"
rstest_reuse = "0.7.0"

# mocking
mockall = "0.14.0"
wiremock = "0.6.3"

# async utils
hyper-util = "0.1.14"
futures = "0.3.31"
tower = "0.5.2"

# utils
rand = "0.10.1"
indoc = "2.0.6"

[build-dependencies]
tonic-prost-build = "0.14"

[lints]
workspace = true

[package.metadata.cargo-machete]
# Machete does not understand that prost is used in generated code.
ignored = ["tonic-prost"]
