[package]
name = "genesis-parser"
version = "0.1.0"
edition = "2024"
publish = false
rust-version.workspace = true

[dependencies]
# bertha
bertha-types = { path = "../bertha-types" }

# serialization
alloy-rlp = { version = "0.3.12", features = ["derive"] }

# compression
flate2 = "1.1.1"

# error handling
thiserror = "2.0.12"

# era parsing
e2store = { git = "https://github.com/ethereum/trin", rev = "30aeef8" }
ethportal-api = { git = "https://github.com/ethereum/trin", rev = "30aeef8" } # the git dep on e2store uses a git dep on ethportal-api and we have to match it
tree_hash = "0.10.0"

[dev-dependencies]
const-hex = "1.14.1"

[lints]
workspace = true
