# Copyright 2026 Sonic Operations Ltd
# This file is part of the Sonic Client
#
# Sonic is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Sonic is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with Sonic. If not, see <http://www.gnu.org/licenses/>.

[package]
name = "genesis-parser"
version = "0.1.0"
edition = "2024"
publish = false
rust-version.workspace = true

[dependencies]
# bertha
bertha-types = { path = "../bertha-types" }

# serialization
alloy-rlp = { version = "0.3.12", features = ["derive"] }

# compression
flate2 = "1.1.1"

# error handling
thiserror = "2.0.12"

# era parsing
e2store = { git = "https://github.com/0xsoniclabs/trin", branch = "bertha-era" }
tree_hash = "0.10.0"
alloy-consensus = "1.0.37"
alloy-eips = "1.0.37"

[dev-dependencies]
# parameterized tests
rstest = "0.26.1"

const-hex = "1.14.1"

[lints]
workspace = true
