# Copyright 2026 Sonic Operations Ltd
# This file is part of the Bertha testing infrastructure for Sonic.
#
# Bertha is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Bertha is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with Bertha. If not, see <http://www.gnu.org/licenses/>.

[package]
name = "genesis-parser"
version = "0.1.0"
edition = "2024"
publish = false
rust-version.workspace = true

[features]
tracy = ["tracy-client/default"]

[dependencies]
# bertha
bertha-types = { path = "../bertha-types" }

# serialization
alloy-rlp = { version = "0.3.12", features = ["derive"] }

# compression
flate2 = "1.1.1"

# error handling
thiserror = "2.0.12"

# era parsing
reth-era = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
lighthouse-types = { git = "https://github.com/sigp/lighthouse", tag = "v8.1.2", package = "types" }
alloy-consensus = "2.0.5"
alloy-eips = "2.0.5"

# profiling
tracy-client = { version = "=0.18.2", default-features = false } # "enabled" feature is disabled by default

[dev-dependencies]
# parameterized tests
rstest = "0.26.1"

const-hex = "1.14.1"

[lints]
workspace = true
